// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshots when active 1`] = `
<div
  className="-dr-pogodin-react-utils___src-shared-components-Button-style___button___2629gm   BUTTON_CLASS -dr-pogodin-react-utils___src-shared-components-Button-style___active___2qX90D   ACTIVE_CLASS"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  BUTTON
</div>
`;

exports[`Matches snapshots when disabled 1`] = `
<div
  className="-dr-pogodin-react-utils___src-shared-components-Button-style___button___2629gm   BUTTON_CLASS -dr-pogodin-react-utils___src-shared-components-Button-style___disabled___24vuTm   DISABLED_CLASS"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when disabled 2`] = `
<div
  className="-dr-pogodin-react-utils___src-shared-components-Button-style___button___2629gm   BUTTON_CLASS -dr-pogodin-react-utils___src-shared-components-Button-style___disabled___24vuTm"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when rendered as link 1`] = `
<a
  className="-dr-pogodin-react-utils___src-shared-components-Button-style___button___2629gm   BUTTON_CLASS -dr-pogodin-react-utils___src-shared-components-Button-style___active___2qX90D   ACTIVE_CLASS"
  disabled={false}
  href="/SOME/TEST/URL"
  onClick={[Function]}
  onMouseDown={null}
>
  BUTTON
</a>
`;
